--- a/doc/addons/evm/functions/page.mdx
+++ b/doc/addons/evm/functions/page.mdx
@@ -712,12 +712,17 @@ Coming soon
 <Properties>
 
 
-  <Property name="bytecode" required="optional" type="string">
+  <Property name="bytecode" required="optional" type="string | addon(evm::foundry_bytecode_data)">
     Coming Soon
   </Property>
 
 
   <Property name="constructor_args" required="optional" type="array[string]">
+    Coming Soon
+  </Property>
+
+
+  <Property name="linked_libraries" required="optional" type="object">
     Coming Soon
   </Property>
 
